crates/kyac/snapshots/kyanite__token__tests__calls.snap
---
source: kyanite-core/src/token/mod.rs
expression: stream.tokens
---
[
    Token {
        kind: Fun,
        lexeme: None,
        span: Span {
            line: 1,
            column: 1,
            length: 3,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "foo",
        ),
        span: Span {
            line: 1,
            column: 5,
            length: 3,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 1,
            column: 8,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "bar",
        ),
        span: Span {
            line: 1,
            column: 9,
            length: 3,
        },
    },
    Token {
        kind: Colon,
        lexeme: None,
        span: Span {
            line: 1,
            column: 12,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "int",
        ),
        span: Span {
            line: 1,
            column: 14,
            length: 3,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 1,
            column: 17,
            length: 1,
        },
    },
    Token {
        kind: Colon,
        lexeme: None,
        span: Span {
            line: 1,
            column: 18,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "int",
        ),
        span: Span {
            line: 1,
            column: 20,
            length: 3,
        },
    },
    Token {
        kind: LeftBrace,
        lexeme: None,
        span: Span {
            line: 1,
            column: 24,
            length: 1,
        },
    },
    Token {
        kind: Return,
        lexeme: None,
        span: Span {
            line: 2,
            column: 4,
            length: 6,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "bar",
        ),
        span: Span {
            line: 2,
            column: 11,
            length: 3,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 2,
            column: 14,
            length: 1,
        },
    },
    Token {
        kind: RightBrace,
        lexeme: None,
        span: Span {
            line: 3,
            column: 1,
            length: 1,
        },
    },
    Token {
        kind: Fun,
        lexeme: None,
        span: Span {
            line: 5,
            column: 1,
            length: 3,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "bar",
        ),
        span: Span {
            line: 5,
            column: 5,
            length: 3,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 5,
            column: 8,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 5,
            column: 9,
            length: 1,
        },
    },
    Token {
        kind: Colon,
        lexeme: None,
        span: Span {
            line: 5,
            column: 10,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "float",
        ),
        span: Span {
            line: 5,
            column: 12,
            length: 5,
        },
    },
    Token {
        kind: LeftBrace,
        lexeme: None,
        span: Span {
            line: 5,
            column: 18,
            length: 1,
        },
    },
    Token {
        kind: Return,
        lexeme: None,
        span: Span {
            line: 6,
            column: 4,
            length: 6,
        },
    },
    Token {
        kind: Literal,
        lexeme: Some(
            "42.",
        ),
        span: Span {
            line: 6,
            column: 11,
            length: 3,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 6,
            column: 14,
            length: 1,
        },
    },
    Token {
        kind: RightBrace,
        lexeme: None,
        span: Span {
            line: 7,
            column: 1,
            length: 1,
        },
    },
    Token {
        kind: Fun,
        lexeme: None,
        span: Span {
            line: 9,
            column: 1,
            length: 3,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "helloWorld",
        ),
        span: Span {
            line: 9,
            column: 5,
            length: 10,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 9,
            column: 15,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 9,
            column: 16,
            length: 1,
        },
    },
    Token {
        kind: LeftBrace,
        lexeme: None,
        span: Span {
            line: 9,
            column: 18,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "println",
        ),
        span: Span {
            line: 10,
            column: 4,
            length: 7,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 10,
            column: 11,
            length: 1,
        },
    },
    Token {
        kind: Literal,
        lexeme: Some(
            "\"Hello world!\"",
        ),
        span: Span {
            line: 10,
            column: 12,
            length: 14,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 10,
            column: 26,
            length: 1,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 10,
            column: 27,
            length: 1,
        },
    },
    Token {
        kind: RightBrace,
        lexeme: None,
        span: Span {
            line: 11,
            column: 1,
            length: 1,
        },
    },
    Token {
        kind: Fun,
        lexeme: None,
        span: Span {
            line: 13,
            column: 1,
            length: 3,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "main",
        ),
        span: Span {
            line: 13,
            column: 5,
            length: 4,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 13,
            column: 9,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 13,
            column: 10,
            length: 1,
        },
    },
    Token {
        kind: LeftBrace,
        lexeme: None,
        span: Span {
            line: 13,
            column: 12,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "helloWorld",
        ),
        span: Span {
            line: 14,
            column: 4,
            length: 10,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 14,
            column: 14,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 14,
            column: 15,
            length: 1,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 14,
            column: 16,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "println",
        ),
        span: Span {
            line: 15,
            column: 4,
            length: 7,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 15,
            column: 11,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "foo",
        ),
        span: Span {
            line: 15,
            column: 12,
            length: 3,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 15,
            column: 15,
            length: 1,
        },
    },
    Token {
        kind: Literal,
        lexeme: Some(
            "72",
        ),
        span: Span {
            line: 15,
            column: 16,
            length: 2,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 15,
            column: 18,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 15,
            column: 19,
            length: 1,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 15,
            column: 20,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "println",
        ),
        span: Span {
            line: 16,
            column: 4,
            length: 7,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 16,
            column: 11,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "bar",
        ),
        span: Span {
            line: 16,
            column: 12,
            length: 3,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 16,
            column: 15,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 16,
            column: 16,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 16,
            column: 17,
            length: 1,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 16,
            column: 18,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "println",
        ),
        span: Span {
            line: 17,
            column: 4,
            length: 7,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 17,
            column: 11,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "max",
        ),
        span: Span {
            line: 17,
            column: 12,
            length: 3,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 17,
            column: 15,
            length: 1,
        },
    },
    Token {
        kind: Literal,
        lexeme: Some(
            "10",
        ),
        span: Span {
            line: 17,
            column: 16,
            length: 2,
        },
    },
    Token {
        kind: Comma,
        lexeme: None,
        span: Span {
            line: 17,
            column: 18,
            length: 1,
        },
    },
    Token {
        kind: Literal,
        lexeme: Some(
            "300",
        ),
        span: Span {
            line: 17,
            column: 20,
            length: 3,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 17,
            column: 23,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 17,
            column: 24,
            length: 1,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 17,
            column: 25,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "println",
        ),
        span: Span {
            line: 18,
            column: 4,
            length: 7,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 18,
            column: 11,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "min",
        ),
        span: Span {
            line: 18,
            column: 12,
            length: 3,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 18,
            column: 15,
            length: 1,
        },
    },
    Token {
        kind: Literal,
        lexeme: Some(
            "10.",
        ),
        span: Span {
            line: 18,
            column: 16,
            length: 3,
        },
    },
    Token {
        kind: Comma,
        lexeme: None,
        span: Span {
            line: 18,
            column: 19,
            length: 1,
        },
    },
    Token {
        kind: Literal,
        lexeme: Some(
            "300.",
        ),
        span: Span {
            line: 18,
            column: 21,
            length: 4,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 18,
            column: 25,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 18,
            column: 26,
            length: 1,
        },
    },
    Token {
        kind: Semicolon,
        lexeme: None,
        span: Span {
            line: 18,
            column: 27,
            length: 1,
        },
    },
    Token {
        kind: RightBrace,
        lexeme: None,
        span: Span {
            line: 19,
            column: 1,
            length: 1,
        },
    },
]
