crates/kyac/snapshots/kyanite__token__tests__empty.snap
---
source: kyanite-core/src/token/mod.rs
expression: stream.tokens
---
[
    Token {
        kind: Fun,
        lexeme: None,
        span: Span {
            line: 1,
            column: 1,
            length: 3,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "foo",
        ),
        span: Span {
            line: 1,
            column: 5,
            length: 3,
        },
    },
    Token {
        kind: LeftParen,
        lexeme: None,
        span: Span {
            line: 1,
            column: 8,
            length: 1,
        },
    },
    Token {
        kind: RightParen,
        lexeme: None,
        span: Span {
            line: 1,
            column: 9,
            length: 1,
        },
    },
    Token {
        kind: Colon,
        lexeme: None,
        span: Span {
            line: 1,
            column: 10,
            length: 1,
        },
    },
    Token {
        kind: Identifier,
        lexeme: Some(
            "void",
        ),
        span: Span {
            line: 1,
            column: 12,
            length: 4,
        },
    },
    Token {
        kind: LeftBrace,
        lexeme: None,
        span: Span {
            line: 1,
            column: 17,
            length: 1,
        },
    },
    Token {
        kind: RightBrace,
        lexeme: None,
        span: Span {
            line: 1,
            column: 18,
            length: 1,
        },
    },
    Token {
        kind: Eof,
        lexeme: None,
        span: Span {
            line: 2,
            column: 0,
            length: 1,
        },
    },
]
