crates/kyac/snapshots/kyanite__token__tests__loooong.snap
---
source: kyanite-core/src/token/mod.rs
expression: stream.errors
---
[
    PreciseError {
        filename: "test-cases/tokens/loooong.kya",
        heading: "unterminated string",
        source: "    println(\"hello world);",
        span: Span {
            line: 102,
            column: 13,
            length: 1,
        },
        text: "opening quote here",
    },
]
